[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/controls/btn_hover.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/controls/btn_normal.tres" type="StyleBox" id=2]
[ext_resource path="res://ui/controls/btn_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/controls/connections_group.tres" type="ButtonGroup" id=4]
[ext_resource path="res://ui/controls/button_panel.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/controls/Connections.gd" type="Script" id=6]

[sub_resource type="InputEventAction" id=1]
action = "build_xs"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "build_s"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "build_m"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "build_l"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "build_xl"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[sub_resource type="InputEventAction" id=11]
action = "repair"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[sub_resource type="InputEventAction" id=13]
action = "dismantle"

[sub_resource type="ShortCut" id=14]
shortcut = SubResource( 13 )

[node name="Controls" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -185.0
margin_top = -34.0
margin_right = 185.0
custom_styles/panel = ExtResource( 5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionControls" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 1.0
margin_right = 362.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XS" type="Button" parent="ConnectionControls"]
margin_right = 40.0
margin_bottom = 33.0
hint_tooltip = "XS Cable"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 2 )
group = ExtResource( 4 )
text = "XS"

[node name="S" type="Button" parent="ConnectionControls"]
margin_left = 44.0
margin_right = 72.0
margin_bottom = 33.0
hint_tooltip = "S Cable"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 4 )
group = ExtResource( 4 )
text = "S"

[node name="M" type="Button" parent="ConnectionControls"]
margin_left = 76.0
margin_right = 108.0
margin_bottom = 33.0
hint_tooltip = "M Cable"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 6 )
group = ExtResource( 4 )
text = "M"

[node name="L" type="Button" parent="ConnectionControls"]
margin_left = 112.0
margin_right = 138.0
margin_bottom = 33.0
hint_tooltip = "L Cable"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 8 )
group = ExtResource( 4 )
text = "L"

[node name="XL" type="Button" parent="ConnectionControls"]
margin_left = 142.0
margin_right = 180.0
margin_bottom = 33.0
hint_tooltip = "XL Cable"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 10 )
group = ExtResource( 4 )
text = "XL"

[node name="Repair" type="Button" parent="ConnectionControls"]
margin_left = 184.0
margin_right = 253.0
margin_bottom = 33.0
hint_tooltip = "Repair a cable via click
or hold and release R
to repair all cables."
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 12 )
group = ExtResource( 4 )
text = "Repair"

[node name="Dismantle" type="Button" parent="ConnectionControls"]
margin_left = 257.0
margin_right = 354.0
margin_bottom = 33.0
hint_tooltip = "Dismantle a connection.
No refunds!"
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
toggle_mode = true
shortcut = SubResource( 14 )
group = ExtResource( 4 )
text = "Dismantle"
[connection signal="pressed" from="ConnectionControls/XS" to="." method="_on_XS_pressed"]
[connection signal="pressed" from="ConnectionControls/S" to="." method="_on_S_pressed"]
[connection signal="pressed" from="ConnectionControls/M" to="." method="_on_M_pressed"]
[connection signal="pressed" from="ConnectionControls/L" to="." method="_on_L_pressed"]
[connection signal="pressed" from="ConnectionControls/XL" to="." method="_on_XL_pressed"]
[connection signal="pressed" from="ConnectionControls/Repair" to="." method="_on_Repair_pressed"]
[connection signal="pressed" from="ConnectionControls/Dismantle" to="." method="_on_Dismantle_pressed"]
